Modified the project structure
Now the semestral work consists off only one project.
 - 2 build targets, one for motor reader and one
   for motor writer
 - Shared memory was dropped from the plan and replaced
   with simple thread safe fifo/ring buffer

--- a/semestralWork/.project
+++ b/semestralWork/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>swTCPserver</name>
+	<name>semestralWork</name>
 	<comment></comment>
 	<projects>
 	</projects>
