--- a/semestralWork/.cproject
+++ b/semestralWork/.cproject
@@ -27,4 +27,5 @@
 		<initialized value="true"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
